<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >

    <string name="privacy_protocal">《自定义隐私协议》</string>
    <string name="privacy_protocals">《隐私协议》</string>
    <string name="swicth_to_code">切换至验证码登录</string>
    <string name="swicth_to_pwd">切换至密码登录</string>
    <string name="phone_login">使用上面的手机号登录</string>
    <string name="agree_protocal_login">同意服务条款才可继续登录</string>
    <string name="input_nickname">输入昵称</string>
    <string name="nickname_not_empty">昵称不能为空</string>
    <string name="now_register">正在注册</string>
    <string name="set_nickname">设置昵称</string>
    <string name="pwd_login_app">密码登录</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="hint_reinput_pwd">请再次输入密码</string>
    <string name="hint_input_new_pwd">请输入新密码</string>
    <string name="hint_input_new_code">请输入新验证码</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="code_login">验证码登录</string>
    <string name="this_phone_login">本机号码登录</string>
    <string name="login_agree">登录即代表同意</string>
    <string name="user_use_protocal">《用户使用协议》</string>
    <string name="opening_authroizon_page">正在唤起授权页</string>
    <string name="first_regiser">请先注册</string>
    <string name="code_sended_to">验证码已发送至</string>
    <string name="unregister_phone_auto_login">未注册手机验证即自动登录</string>
    <string name="get_code">获取验证码</string>
    <string name="short_code">短信验证码</string>
    <string name="code">验证码</string>
    <string name="hint_nput_six_new_pwd">请输入至少6位新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="mail_code">邮箱验证码</string>
    <string name="hint_input_mail">请输入邮箱号</string>
    <string name="double_input_pwd_unsame">两次输入密码不一致</string>
    <string name="sended">已发送</string>
    <string name="bind_mail_success">绑定邮箱账号成功，请登录</string>
    <string name="welcome_register">欢迎注册</string>
    <string name="hint_input_code">请输入验证码</string>
    <string name="hint_input_mail_code">请输入邮箱验证码</string>
    <string name="hint_input_had_mail">请输入已有邮箱账号</string>
    <string name="hint_input_mail_pwd">请输入邮箱账号密码</string>
    <string name="bind_mail_account">绑定邮箱账号</string>
    <string name="register_account">注册账号</string>
    <string name="hint_input_nickname">请输入昵称</string>
    <string name="hint_invitecode">请输入邀请码(必填)</string>
    <string name="set_login_pwd">设置登录密码(至少6位)</string>
    <string name="you_app_is">您的%s号是：</string>
    <string name="please_save_your_account">(请妥善保管好您的%s号，以便于登录)</string>
    <string name="register_success">注册成功</string>
    <string name="pwd_set_success_login">密码设置成功，请登录</string>
    <string name="find_pwd">找回密码</string>
    <string name="input_six_pwd">请输入至少6位新密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="repair_pwd">修改密码</string>
    <string name="repair_success">修改成功</string>
    <string name="reconfirm_new_pwd">再次确认新密码</string>
    <string name="next_step">下一步</string>
    <string name="next_step_d">下一步(%d)</string>
    <string name="third_bind_phone_success">三方绑定手机成功</string>
    <string name="according_privacy">根据国家有关法律法规要求，使用互联网服务需进行账号实名，请绑定实名手机号。</string>
    <string name="submit">提交</string>
    <string name="tuichu">退出</string>
    <string name="exit">取消</string>
    <string name="exit_now_account">确定退出当前账号？</string>
    <string name="read_and_agree">阅读并同意</string>
    <string name="user_service_protocal">《用户服务协议》</string>
    <string name="other_type_login">其它方式登录</string>
    <string name="other_login_type">其它登录方式</string>
    <string name="weixinlogin">微信登录</string>
    <string name="shoujihaonotempty">手机号不能为空</string>
    <string name="yanzhengmanotempty">验证码不能为空</string>
    <string name="mimanotempty">密码不能为空</string>
    <string name="mailnotempty">邮箱不能为空</string>
    <string name="mailaccountnotempty">邮箱账号密码不能为空</string>
    <string name="qingxiangou">请先勾选同意用户服务协议和隐私政策</string>
    <string name="zhanghaobudiyu">账号不能低于5位</string>
    <string name="nicknotempty">昵称不能为空</string>
    <string name="yaoqingmanotempty">邀请码不能为空</string>
    <string name="nicknotdiyu">昵称不能低于%d个字符</string>
    <string name="zhanghaonotempty">账号不能为空</string>
    <string name="dangqianyizhuce">当前手机号已注册，如绑定至该手机则当前三方账号将清空，</string>
    <string name="shifoubangdingshouji">是否绑定该手机?</string>
    <string name="bindshouji">绑定该手机</string>
    <string name="huanqitashouji">换其他手机</string>
    <string name="quedingtuichuma">确定要退出吗？</string>
    <string name="please_agree_privacy">请勾选同意用户协议与隐私协议</string>

</resources>
