<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="data"
            type="com.tiocloud.account.feature.login_sms.InputPhoneFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_bg"
        >

        <!--状态栏-->
        <FrameLayout
            android:id="@+id/statusBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--顶部底图-->
        <!--<ImageView
            android:id="@+id/iv_top_bg"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:background="@drawable/account_page_top_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/statusBar" />-->


        <!--标题-->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="@dimen/account_top_height"
            android:text="@string/code_login"
            android:textColor="#333333"
            android:textStyle="bold"
            android:textSize="@dimen/sp_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unregister_phone_auto_login"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginLeft="36dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            />
        <!--手机号-->
        <com.watayouxiang.androidutils.widget.TioShadowLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="@dimen/dp_74"
            android:layout_marginRight="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_t2">

            <com.watayouxiang.androidutils.widget.edittext.TioEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/edit_bg"
                android:drawableLeft="@drawable/icon_mobilephone"
                android:drawablePadding="4dp"
                app:tet_clearIconEnable="true"
                android:gravity="center_vertical"
                android:hint="@string/hint_input_phone"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:singleLine="true"
                android:text="@={data.txt_phone}"
                android:textColor="#333333"
                android:textColorHint="#D5D5D5"
                android:textSize="16sp" />
        </com.watayouxiang.androidutils.widget.TioShadowLayout>

        <!--注册-->
        <com.watayouxiang.androidutils.widget.TioShadowLayout
            android:id="@+id/ll_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_phone">

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:enabled="@{!TextUtils.isEmpty(data.txt_phone)}"
                android:gravity="center"
                android:onClick="@{data.onClick_ok}"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:qmui_backgroundColor="@color/account_sel_ok_bg_color"
                app:qmui_borderColor="@color/transparent"
                app:qmui_borderWidth="0px"
                app:qmui_radius="24dp" />
        </com.watayouxiang.androidutils.widget.TioShadowLayout>

        <!--账号注册-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:onClick="@{data.onClick_register}"
            android:text="@string/pwd_login_app"
            android:textColor="@color/account_sel_tip_txt_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ll_ok"
            app:layout_constraintStart_toStartOf="@id/ll_ok"
            app:layout_constraintTop_toBottomOf="@id/ll_ok" />

        <!--三方登录-->
        <com.tiocloud.account.widget.ThirdPartyLoginView
            android:id="@+id/thirdPartyLoginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="#FF999999"
                android:text="@string/login_agree"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="#FF666666"
                android:text="@string/user_use_protocal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="#FF666666"
                android:text="@string/privacy_protocals"/>
        </LinearLayout>

        <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_close_black"
            android:layout_marginTop="@dimen/dp_36"
            android:layout_marginLeft="36dp"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!--<com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_close_gray"
            app:layout_constraintBottom_toBottomOf="@id/ll_phone"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="@id/ll_phone"
            android:layout_marginBottom="@dimen/dp_10"
            />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>