<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="data"
            type="com.tiocloud.account.feature.modify_pwd.InputPhoneFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.watayouxiang.androidutils.widget.WtTitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:tb_tvTitle_text="修改密码"
            />
        <!--状态栏-->
        <FrameLayout
            android:id="@+id/statusBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--标题栏-->
<!--
        <com.watayouxiang.androidutils.widget.WtTitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusBar"
            app:tb_background="@color/transparent"
            app:tb_tvTitle_text="返回" />
-->

        <!--手机号-->
        <com.watayouxiang.androidutils.widget.TioShadowLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="32dp"
            android:layout_marginRight="@dimen/dp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleBar">

            <com.watayouxiang.androidutils.widget.edittext.TioEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/edit_bg"
                android:drawableLeft="@drawable/icon_mobilephone"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                app:tet_clearIconEnable="true"
                android:hint="@string/hint_input_phone"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:text="@={data.txt_phone}"
                android:textColor="#333333"
                android:textColorHint="#D5D5D5"
                android:textSize="16sp" />
        </com.watayouxiang.androidutils.widget.TioShadowLayout>

        <com.watayouxiang.androidutils.widget.TioShadowLayout
            android:id="@+id/ll_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="12dp"
            android:layout_marginRight="@dimen/dp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_phone">

            <com.watayouxiang.androidutils.widget.edittext.TioEditText
                android:id="@+id/et_sms"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/edit_bg"
                android:drawableLeft="@drawable/icon_vertification"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/short_code"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#D5D5D5"
                android:textSize="16sp" />
        </com.watayouxiang.androidutils.widget.TioShadowLayout>

        <com.watayouxiang.androidutils.widget.TioShadowLayout
            android:id="@+id/ll_pwd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="12dp"
            android:layout_marginRight="@dimen/dp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_sms">

            <com.watayouxiang.androidutils.widget.edittext.TioEditText
                android:id="@+id/et_pwd1"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/edit_bg"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_nput_six_new_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#D5D5D5"
                android:textSize="16sp" />
        </com.watayouxiang.androidutils.widget.TioShadowLayout>

        <com.watayouxiang.androidutils.widget.TioShadowLayout
            android:id="@+id/ll_pwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="12dp"
            android:layout_marginRight="@dimen/dp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_pwd1">

            <com.watayouxiang.androidutils.widget.edittext.TioEditText
                android:id="@+id/et_pwd2"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/edit_bg"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/confirm_new_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#333333"
                android:textColorHint="#D5D5D5"
                android:textSize="16sp" />
        </com.watayouxiang.androidutils.widget.TioShadowLayout>

        <!--注册-->
        <com.watayouxiang.androidutils.widget.TioShadowLayout
            android:id="@+id/ll_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="31dp"
            android:layout_marginRight="@dimen/dp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_pwd2">

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:enabled="@{!TextUtils.isEmpty(data.txt_phone)}"
                android:gravity="center"
                android:onClick="@{data.onClick_ok}"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:qmui_backgroundColor="@color/account_sel_ok_bg_color"
                app:qmui_borderColor="@color/transparent"
                app:qmui_borderWidth="0px"
                app:qmui_radius="24dp" />
        </com.watayouxiang.androidutils.widget.TioShadowLayout>

        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/ll_sms"
            app:layout_constraintEnd_toEndOf="@id/ll_sms"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/get_code"
            android:textColor="@color/theme_color"
            />
        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
            android:id="@+id/tv_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/ll_sms"
            app:layout_constraintEnd_toEndOf="@id/ll_sms"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="已发送(59)"
            android:visibility="gone"
            android:textColor="@color/gray_aaaaaa"
            />
        <!--<CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/ll_pwd1"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@id/ll_pwd1"
            android:button="@drawable/select_pwd_eye"
            android:layout_marginBottom="@dimen/dp_10"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/ll_pwd2"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@id/ll_pwd2"
            android:button="@drawable/select_pwd_eye"
            android:layout_marginBottom="@dimen/dp_10"
            />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>